// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`is unchanged 1`] = `
[
  "length",
  "name",
  "prototype",
]
`;

exports[`tag is unchanged 1`] = `
[
  "arguments",
  "caller",
  "indent",
  "length",
  "name",
  "prototype",
]
`;
